--- a/1.2-requests-templates/recipes/calculator/templates/calculator/recipe.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/recipe.html
@@ -2,14 +2,19 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Рецепты</title>
+    <title>{{ dish_name }}</title>
 </head>
 <body>
+<div>
 <h2>{{ dish_name }}</h2>
 {% for ingredient, amount in recipe.items %}
-    <p>{{ ingredient }}: {{ amount }}</p>
+    <li>{{ ingredient }}: {{ amount }}</li>
 {% empty %}
     <p>Такого рецепта не знаю :(</p>
 {% endfor %}
+</div>
+<div>
+    <br><a href="/">Назад</a>
+</div>
 </body>
 </html>
