task 2.1 books: done

--- a/2.1-databases/models_list_displaying/templates/books/books_pub_date.html
+++ b/2.1-databases/models_list_displaying/templates/books/books_pub_date.html
@@ -16,5 +16,11 @@
             </div>
             {% endfor %}
         </div>
+        {% if previous_book is not None %}
+            <a class="button button-primary" href="/books/{{ previous_book.pub_date|date:'Y-m-d' }}"><-- {{ previous_book.pub_date|date:'Y-m-d' }}</a>
+        {% endif %}
+        {% if next_book is not None %}
+            <a class="button button-primary" href="/books/{{ next_book.pub_date|date:'Y-m-d' }}">{{ next_book.pub_date|date:'Y-m-d' }} --></a>
+        {% endif %}
     </div>
 {% endblock %}
