--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -6,7 +6,10 @@
 <div class="row">
   <ul>
   {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
+    <li>{{ student.name }} - {{ student.group }} <br>
+      {% for teacher in student.teachers.all|dictsort:"teacher.name" %}
+      Преподаватель: {{ teacher.teacher.name }} - {{ teacher.teacher.subject }}</li>
+      {% endfor %}
   {% endfor %}
   </ul>
 </div>
